@@ -15,6 +15,7 @@
  */
 package org.kuali.hr.time;
 
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -195,7 +196,7 @@ public abstract class HrEffectiveDateActiveLookupableHelper extends KualiLookupa
 
 		if (matchingResultsCount.intValue() <= searchResultsLimit.intValue()) {
 
-		matchingResultsCount = new Long(0);
+		matchingResultsCount = Long.valueOf(0);
 
 		}
 
@@ -203,7 +204,7 @@ public abstract class HrEffectiveDateActiveLookupableHelper extends KualiLookupa
 
 	}
 	@SuppressWarnings("rawtypes")
-	public class EffectiveDateTimestampCompare implements Comparator{
+	public static class EffectiveDateTimestampCompare implements Comparator, Serializable {
 
 		@Override
 		public int compare(Object arg0, Object arg1) {
